<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.lokacar.locationvoiture.ui.client.AjoutClientActivity">

    <TextView
        android:id="@+id/title_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Modification Profil"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="15dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/nom_client"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/form_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ajouter un nom"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/prenom_client"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/form_prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ajouter un prénom"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/adresse_client"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/form_adresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ajouter une adresse"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/code_postal_client"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/form_cp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ajouter un code postal"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/ville_client"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/form_ville"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ajouter une ville"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/telephone_client"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/form_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ajouter un telephone"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/email_client"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/form_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ajouter un email"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_saveModifsClient"
        android:text="Sauvegarder"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
