<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.lokacar.locationvoiture.ui.connexion.ConnectionActivity"
    android:gravity="center"
    android:padding="15dp"
    >

    <LinearLayout
        android:id="@+id/blocLogin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_login"
            android:text="@string/login"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editText_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="louie54@yahoo.com"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/blocMdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_mdp"
            android:text="@string/mot_de_passe"
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editText_mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_connexion"
        android:text="@string/btn_se_connecter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
        />

</LinearLayout>
