<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.lokacar.locationvoiture.ui.accueil.AccueilActivity">

    <TextView
    android:id="@+id/textViewNomAgence"
    android:text="AGENCE"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:textColor="@color/colorBlack"/>
    <TextView
        android:id="@+id/textViewAdresseAgence"
        android:text="AGENCE LALALALA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/colorBlack"/>
    <TextView
        android:id="@+id/textViewCaAgence"
        android:text="AGENCE LALALALA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/colorBlack"/>

    <LinearLayout
        android:id="@+id/bloc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_listVehicules"
            android:text="@string/liste_vehicules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_gestionLocation"
            android:text="@string/gestion_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_listClients"
            android:text="@string/liste_clients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>
